--- a/index.html
+++ b/index.html
@@ -2,6 +2,14 @@
 <html lang="en">
 
 <head>
+    <!-- require meta tages -->
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <!-- <title>structure element</title> -->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- bootstrap css -->
+    <link rel="stylesheet" href="conFusion\node_modules\bootstrap\dist\css\bootstrap.min.css">
     <title>Ristorante Con Fusion</title>
 </head>
 
@@ -95,6 +103,11 @@
            </div>
         </div>
     </footer>
+
+    <!-- jQuery first, then Popper.js, then bootstrap JS. -->
+    <script src="conFusion\node_modules\jquery\dist\jquery.slim.min.js"></script>
+    <script src="conFusion\node_modules\popper.js\dist\umd\popper.min.js"></script>
+    <script src="conFusion\node_modules\bootstrap\dist\js\bootstrap.min.js"></script>
 
 </body>
 
