--- a/index.html
+++ b/index.html
@@ -327,6 +327,7 @@
     <script src="node_modules\popper.js\dist\umd\popper.min.js"></script>
     <script src="node_modules\bootstrap\dist\js\bootstrap.min.js"></script>
     <script>
+// 没有click时切换fa-pause fa-play,并且carousel周期并非2000ms
        $(document).ready(function() {
           $('mycarousel').carousel({ interval: 2000 });
            $("#carouselButton").click(function(){
